fixed download button out of place for screen sizes 768 upwards

--- a/style.css
+++ b/style.css
@@ -843,7 +843,7 @@ hr:nth-child(3) {
         margin-left: 85%;
     }
 
-    .download-local {
+    .proj-details .download-local {
         float: right;
         margin-right: 5px;
         margin-left: 0px;
